Version 2.1.108
    Fixed an amusing exploit for easy leveling in Acrobatics
    mcMMO should no longer break if FAWE is being used in conjunction with WG on the server
    mcMMO now loads after worlds do during start up (which is what it should be doing)

    NOTES:
    Mobs will now only reward Dodge XP a certain amount of times
    You can turn off this exploit prevention by disabling ExploitFix.Acrobatics in experience.yml

Version 2.1.107
    Fixed an exploit that allowed automated XP gain for Excavation
    Fixed encoding of russian translation
    New API event McMMOPlayerProfileLoadEvent (thanks Shrek5InTheatres2019)

Version 2.1.106
    Added a few missing blocks to the ability blacklist tables (prevents readying/using abilities on certain blocks that have right click functionality)
    Updated Japanese locale (thanks ethernetcat)
    Updated Simplified Chinese locale (thanks Fu_Meng)

Version 2.1.105
    mcMMO will reset players scoreboard to the main scoreboard if they move into a blacklisted world
    Beast lore now shows max jump height and other tweaks (Thanks QuantumToasted)
    If the server has enabled level caps (which are not on by default) players will be shown that they are at max level instead of seeing how much XP needed to reach an impossible level (thanks Shrek5InTheatres2019)
    Large update to Italian locale (thanks Leomixer17)

    NOTES:
    The scoreboard change should result in mcMMO removing scoreboards from players properly when they enter a black listed world. This is a hacky band aid fix as our scoreboard code is archaic and needs to be rewritten in 2.2 and not 2.1. Expect a scoreboard overhaul sometime in the future.

Version 2.1.104
    Fixed a bug resulting in many errors when using Rupture
    Large update to the Japanese locale (thanks ethernetcat)
    Updated Hungarian locale (thanks andris)

Version 2.1.103
    Treasure item amount will default to 1 if not specified instead of breaking mcMMO